1. Refactored messages to use diacritics 2. Code refactor

--- a/shared/src/main/resources/messages_RO.properties
+++ b/shared/src/main/resources/messages_RO.properties
@@ -1,18 +1,18 @@
 # DEFAULT ERROR
-GENERAL = Eroare intern? a serverului
+GENERAL = Eroare intern\u0103 a serverului
 
 # AUTHENTICATION ERRORS
-INVALID_REGISTRATION_CODE = Cod de înregistrare invalid
-EMAIL_ALREADY_TAKEN = Emailul este deja utilizat. V? rug?m s? alege?i altul
-USERNAME_ALREADY_TAKEN = Numele de utilizator este deja utilizat. V? rug?m s? alege?i altul
-INVALID_CREDENTIALS = Nume de utilizator sau parol? invalid?
+INVALID_REGISTRATION_CODE = Cod de \u00EEnregistrare invalid
+EMAIL_ALREADY_TAKEN = Emailul este deja utilizat. V\u0103 rug\u0103m s\u0103 alege\u021Bi altul
+USERNAME_ALREADY_TAKEN = Numele de utilizator este deja utilizat. V\u0103 rug\u0103m s\u0103 alege\u021Bi altul
+INVALID_CREDENTIALS = Nume de utilizator sau parol\u0103 invalid\u0103
 
 # WASHING-MACHINE ERRORS
-SERIAL_NUMBER_ALREADY_TAKEN = Num?rul de serie este deja utilizat
-EMPTY_PAGE = Nu s-au g?sit produse pentru filtrul selectat
-SERIAL_NUMBER_NOT_FOUND = Nu s-a g?sit niciun produs cu num?rul de serie specificat
-REPORT_GENERATION_FAIL = Nu s-a putut genera raportul. V? rug?m s? încerca?i din nou mai târziu
+SERIAL_NUMBER_ALREADY_TAKEN = Num\u0103rul de serie este deja utilizat
+EMPTY_PAGE = Nu s-au g\u0103sit produse pentru filtrul selectat
+SERIAL_NUMBER_NOT_FOUND = Nu s-a g\u0103sit niciun produs cu num\u0103rul de serie specificat
+REPORT_GENERATION_FAIL = Nu s-a putut genera raportul. V\u0103 rug\u0103m s\u0103 \u00EEncerca\u021Bi din nou mai t\u00E2rziu
 
 # PRODUCT ERRORS
-NO_MANUFACTURERS_FOUND = Nu s-au g?sit produc?tori pentru categoria de produs selectat?
-NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nu s-au g?sit produse pentru produc?torul selectat
+NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
+NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nu s-au g\u0103sit produse pentru produc\u0103torul furnizat
