--- a/shared/src/main/resources/messages_SL.properties
+++ b/shared/src/main/resources/messages_SL.properties
@@ -1,17 +1,17 @@
 # DEFAULT ERROR
-GENERAL = Notranja napaka stre?nika
+GENERAL = Notranja napaka stre\u017Enika
 
 # AUTHENTICATION ERRORS
 INVALID_REGISTRATION_CODE = Neveljavna registracijska koda
-EMAIL_ALREADY_TAKEN = Elektronski naslov je ?e v uporabi. Izberite drugega
-USERNAME_ALREADY_TAKEN = Uporabni?ko ime je ?e v uporabi. Izberite drugega
-INVALID_CREDENTIALS = Neveljavno uporabni?ko ime ali geslo
+EMAIL_ALREADY_TAKEN = Elektronski naslov je \u017Ee v uporabi. Izberite drugega
+USERNAME_ALREADY_TAKEN = Uporabni\u0161ko ime je \u017Ee v uporabi. Izberite drugega
+INVALID_CREDENTIALS = Neveljavno uporabni\u0161ko ime ali geslo
 
 # WASHING-MACHINE ERRORS
-SERIAL_NUMBER_ALREADY_TAKEN = Serijska ?tevilka je ?e v uporabi
+SERIAL_NUMBER_ALREADY_TAKEN = Serijska \u0161tevilka je \u017Ee v uporabi
 EMPTY_PAGE = Izbrani filter ne najde nobenega izdelka
-SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko ?tevilko ni bil najden
-REPORT_GENERATION_FAIL = Ne moremo ustvariti poro?ila. Poskusite znova pozneje
+SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil najden
+REPORT_GENERATION_FAIL = Ne moremo ustvariti poro\u010Dila. Poskusite znova pozneje
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
