--- a/shared/src/main/resources/messages_ES.properties
+++ b/shared/src/main/resources/messages_ES.properties
@@ -2,22 +2,17 @@
 GENERAL = Error interno del servidor
 
 # AUTHENTICATION ERRORS
-INVALID_REGISTRATION_CODE = Código de registro inválido
-EMAIL_ALREADY_TAKEN = El correo electrónico ya está en uso. Por favor, elija otro
-USERNAME_ALREADY_TAKEN = El nombre de usuario ya está en uso. Por favor, elija otro
-INVALID_CREDENTIALS = Nombre de usuario o contraseña inválidos
+INVALID_REGISTRATION_CODE = C\u00F3digo de registro inv\u00E1lido
+EMAIL_ALREADY_TAKEN = El correo electr\u00F3nico ya est\u00E1 en uso. Por favor, elija otro
+USERNAME_ALREADY_TAKEN = El nombre de usuario ya est\u00E1 en uso. Por favor, elija otro
+INVALID_CREDENTIALS = Nombre de usuario o contrase\u00F1a inv\u00E1lidos
 
 # WASHING-MACHINE ERRORS
-SERIAL_NUMBER_ALREADY_TAKEN = El número de serie ya está en uso
-EMPTY_PAGE = No se encontró ningún producto para el filtro seleccionado
-SERIAL_NUMBER_NOT_FOUND = No se encontró ningún producto con el número de serie
-REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nuevo más tarde
+SERIAL_NUMBER_ALREADY_TAKEN = El n\u00FAmero de serie ya est\u00E1 en uso
+EMPTY_PAGE = No se encontr\u00F3 ning\u00FAn producto para el filtro seleccionado
+SERIAL_NUMBER_NOT_FOUND = No se encontr\u00F3 ning\u00FAn producto con el n\u00FAmero de serie
+REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nuevo m\u00E1s tarde
 
 # PRODUCT ERRORS
-NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categoría de producto dada
+NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No se encontraron productos para el fabricante dado
-
-
-
-
-
