--- a/shared/src/main/resources/messages_IT.properties
+++ b/shared/src/main/resources/messages_IT.properties
@@ -3,15 +3,15 @@ GENERAL = Errore interno del server
 
 # AUTHENTICATION ERRORS
 INVALID_REGISTRATION_CODE = Codice di registrazione non valido
-EMAIL_ALREADY_TAKEN = L'email è già in uso. Per favore, scegline un'altra
-USERNAME_ALREADY_TAKEN = Il nome utente è già in uso. Per favore, scegline un altro
+EMAIL_ALREADY_TAKEN = L'email \u00E8 gi\u00E0 in uso. Per favore, scegline un'altra
+USERNAME_ALREADY_TAKEN = Il nome utente \u00E8 gi\u00E0 in uso. Per favore, scegline un altro
 INVALID_CREDENTIALS = Nome utente o password non validi
 
 # WASHING-MACHINE ERRORS
-SERIAL_NUMBER_ALREADY_TAKEN = Il numero di serie è già in uso
+SERIAL_NUMBER_ALREADY_TAKEN = Il numero di serie {0} \u00E8 gi\u00E0 in uso
 EMPTY_PAGE = Nessun prodotto trovato per il filtro selezionato
 SERIAL_NUMBER_NOT_FOUND = Nessun prodotto trovato con il numero di serie fornito
-REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova più tardi
+REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova pi\u00F9 tardi
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
