--- a/shared/src/main/resources/messages_SL.properties
+++ b/shared/src/main/resources/messages_SL.properties
@@ -10,7 +10,7 @@ INVALID_CREDENTIALS = Neveljavno uporabni\u0161ko ime ali geslo
 # WASHING-MACHINE ERRORS
 SERIAL_NUMBER_ALREADY_TAKEN = Serijska \u0161tevilka je \u017Ee v uporabi
 EMPTY_PAGE = Izbrani filter ne najde nobenega izdelka
-SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil najden
+SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil {0}
 REPORT_GENERATION_FAIL = Ne moremo ustvariti poro\u010Dila. Poskusite znova pozneje
 
 # PRODUCT ERRORS
