--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -10,7 +10,7 @@ INVALID_CREDENTIALS = Invalid username or password
 # WASHING-MACHINE ERRORS
 SERIAL_NUMBER_ALREADY_TAKEN = Serial Number is already in use
 EMPTY_PAGE = No product found for the selected filter
-SERIAL_NUMBER_NOT_FOUND = No product with serial number found
+SERIAL_NUMBER_NOT_FOUND = No product with serial number {0} found
 REPORT_GENERATION_FAIL = Could not generate report. Please try again later
 
 # PRODUCT ERRORS
