--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -12,6 +12,7 @@ SERIAL_NUMBER_ALREADY_TAKEN = Serial Number is already in use
 EMPTY_PAGE = No product found for the selected filter
 SERIAL_NUMBER_NOT_FOUND = No product with serial number {0} found
 REPORT_GENERATION_FAIL = Could not generate report. Please try again later
+INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
