--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -12,6 +12,7 @@ SERIAL_NUMBER_ALREADY_TAKEN = Il numero di serie {0} \u00E8 gi\u00E0 in uso
 EMPTY_PAGE = Nessun prodotto trovato per il filtro selezionato
 SERIAL_NUMBER_NOT_FOUND = Nessun prodotto trovato con il numero di serie fornito
 REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova pi\u00F9 tardi
+INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
