--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -12,6 +12,7 @@ SERIAL_NUMBER_ALREADY_TAKEN = Num\u0103rul de serie este deja utilizat
 EMPTY_PAGE = Nu s-au g\u0103sit produse pentru filtrul selectat
 SERIAL_NUMBER_NOT_FOUND = Nu s-a g\u0103sit niciun produs cu num\u0103rul de serie {0}
 REPORT_GENERATION_FAIL = Nu s-a putut genera raportul. V\u0103 rug\u0103m s\u0103 \u00EEncerca\u021Bi din nou mai t\u00E2rziu
+INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
