--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -12,6 +12,7 @@ SERIAL_NUMBER_ALREADY_TAKEN = El n\u00FAmero de serie ya est\u00E1 en uso
 EMPTY_PAGE = No se encontr\u00F3 ning\u00FAn producto para el filtro seleccionado
 SERIAL_NUMBER_NOT_FOUND = No se encontr\u00F3 ning\u00FAn producto con el n\u00FAmero de serie {0}
 REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nuevo m\u00E1s tarde
+INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
