--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -12,6 +12,7 @@ SERIAL_NUMBER_ALREADY_TAKEN = Serijska \u0161tevilka je \u017Ee v uporabi
 EMPTY_PAGE = Izbrani filter ne najde nobenega izdelka
 SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil {0}
 REPORT_GENERATION_FAIL = Ne moremo ustvariti poro\u010Dila. Poskusite znova pozneje
+INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
