1.Added validation library. 2.Added validations for WashingMachineDetailDTO. 3.Enabled validation for endpoint getRecommendation. 4.Created method in GlobalExceptionHandler to handle all validation exceptions. 5. Made the method return a list of translated error messages. 6.Added error messages to resource bundle

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -13,6 +13,11 @@ SERIAL_NUMBER_NOT_FOUND = No product with serial number {0} found
 REPORT_GENERATION_FAIL = Could not generate report. Please try again later
 INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 
+# VALIDATION ERRORS
+MINIMUM_VALUE_0 = Value should be >= 0
+MAXIMUM_VALUE_10 = Value should be <= 10
+VALUE_NOT_NULL = Value can not be null
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No products were found for the given product manufacturer
