--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -13,6 +13,11 @@ SERIAL_NUMBER_NOT_FOUND = No se encontr\u00F3 ning\u00FAn producto con el n\u00F
 REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nuevo m\u00E1s tarde
 INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 
+# VALIDATION ERRORS
+MINIMUM_VALUE_0 = El valor debe ser >= 0
+MAXIMUM_VALUE_10 = El valor debe ser <= 10
+VALUE_NOT_NULL = El valor no puede ser nulo
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No se encontraron productos para el fabricante dado
