--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -13,6 +13,11 @@ SERIAL_NUMBER_NOT_FOUND = Nessun prodotto trovato con il numero di serie fornito
 REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova pi\u00F9 tardi
 INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 
+# VALIDATION ERRORS
+MINIMUM_VALUE_0 = Il valore deve essere >= 0
+MAXIMUM_VALUE_10 = Il valore deve essere <= 10
+VALUE_NOT_NULL = Il valore non pu\u00F2 essere nullo
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nessun prodotto trovato per il produttore fornito
