--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -13,6 +13,11 @@ SERIAL_NUMBER_NOT_FOUND = Nu s-a g\u0103sit niciun produs cu num\u0103rul de ser
 REPORT_GENERATION_FAIL = Nu s-a putut genera raportul. V\u0103 rug\u0103m s\u0103 \u00EEncerca\u021Bi din nou mai t\u00E2rziu
 INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 
+# VALIDATION ERRORS
+MINIMUM_VALUE_0 = Valoarea trebuie s\u0103 fie >= 0
+MAXIMUM_VALUE_10 = Valoarea trebuie s\u0103 fie <= 10
+VALUE_NOT_NULL = Valoarea nu poate fi nul\u0103
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nu s-au g\u0103sit produse pentru produc\u0103torul furnizat
