--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -13,6 +13,11 @@ SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil {0}
 REPORT_GENERATION_FAIL = Ne moremo ustvariti poro\u010Dila. Poskusite znova pozneje
 INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 
+# VALIDATION ERRORS
+MINIMUM_VALUE_0 = Vrednost mora biti >= 0
+MAXIMUM_VALUE_10 = Vrednost mora biti <= 10
+VALUE_NOT_NULL = Vrednost ne sme biti prazna
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nobeni izdelki niso bili najdeni za danega proizvajalca
