Added @Size limit of 200 for String properties

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 MINIMUM_VALUE_0 = Value should be >= 0
 MAXIMUM_VALUE_10 = Value should be <= 10
 VALUE_NOT_NULL = Value can not be null
+MAXIMUM_CHARACTERS_200 = Maximum characters accepted is 200
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
