--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -17,6 +17,7 @@ INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 MINIMUM_VALUE_0 = El valor debe ser >= 0
 MAXIMUM_VALUE_10 = El valor debe ser <= 10
 VALUE_NOT_NULL = El valor no puede ser nulo
+MAXIMUM_CHARACTERS_200 = El n\u00FAmero m\u00E1ximo de caracteres aceptados es 200
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
