--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -17,6 +17,7 @@ INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 MINIMUM_VALUE_0 = Il valore deve essere >= 0
 MAXIMUM_VALUE_10 = Il valore deve essere <= 10
 VALUE_NOT_NULL = Il valore non pu\u00F2 essere nullo
+MAXIMUM_CHARACTERS_200 = Il numero massimo di caratteri accettati \u00E8 200
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
