--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -17,6 +17,7 @@ INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 MINIMUM_VALUE_0 = Valoarea trebuie s\u0103 fie >= 0
 MAXIMUM_VALUE_10 = Valoarea trebuie s\u0103 fie <= 10
 VALUE_NOT_NULL = Valoarea nu poate fi nul\u0103
+MAXIMUM_CHARACTERS_200 = Num\u0103rul maxim de caractere acceptate este 200
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
