--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -1,22 +1,23 @@
 # DEFAULT ERROR
-GENERAL = Notranja napaka stre\u017Enika
+GENERAL = Notranja napaka stre?nika
 
 # AUTHENTICATION ERRORS
 INVALID_REGISTRATION_CODE = Neveljavna registracijska koda
-EMAIL_ALREADY_TAKEN = Elektronski naslov je \u017Ee v uporabi. Izberite drugega
-USERNAME_ALREADY_TAKEN = Uporabni\u0161ko ime je \u017Ee v uporabi. Izberite drugega
-INVALID_CREDENTIALS = Neveljavno uporabni\u0161ko ime ali geslo
+EMAIL_ALREADY_TAKEN = Elektronski naslov je ?e v uporabi. Izberite drugega
+USERNAME_ALREADY_TAKEN = Uporabni?ko ime je ?e v uporabi. Izberite drugega
+INVALID_CREDENTIALS = Neveljavno uporabni?ko ime ali geslo
 
 # WASHING-MACHINE ERRORS
-SERIAL_NUMBER_ALREADY_TAKEN = Serijska \u0161tevilka je \u017Ee v uporabi
-SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko \u0161tevilko ni bil {0}
-REPORT_GENERATION_FAIL = Ne moremo ustvariti poro\u010Dila. Poskusite znova pozneje
+SERIAL_NUMBER_ALREADY_TAKEN = Serijska ?tevilka je ?e v uporabi
+SERIAL_NUMBER_NOT_FOUND = Noben izdelek s to serijsko ?tevilko ni bil {0}
+REPORT_GENERATION_FAIL = Ne moremo ustvariti poro?ila. Poskusite znova pozneje
 INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0 = Vrednost mora biti >= 0
+MINIMUM_VALUE_0=Vrednost mora biti >= 0
 MAXIMUM_VALUE_10 = Vrednost mora biti <= 10
 VALUE_NOT_NULL = Vrednost ne sme biti prazna
+MAXIMUM_CHARACTERS_200 = Najve\u010Dje dovoljeno \u0161tevilo znakov je 200
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
