Modified error messages to use validation placeholders. Removed messageSource call from handleValidationException, as it is not needed anymore.

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -14,10 +14,10 @@ REPORT_GENERATION_FAIL = Could not generate report. Please try again later
 INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0 = Value should be >= 0
-MAXIMUM_VALUE_10 = Value should be <= 10
+MINIMUM_VALUE = Minimum value should be >= {value}
+MAXIMUM_VALUE = Maximum value should be <= {value}
 VALUE_NOT_NULL = Value can not be null
-MAXIMUM_CHARACTERS_200 = Maximum characters accepted is 200
+MAXIMUM_CHARACTERS = Maximum characters accepted is {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
