--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -14,10 +14,10 @@ REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nu
 INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0 = El valor debe ser >= 0
-MAXIMUM_VALUE_10 = El valor debe ser <= 10
+MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
+MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
 VALUE_NOT_NULL = El valor no puede ser nulo
-MAXIMUM_CHARACTERS_200 = El n\u00FAmero m\u00E1ximo de caracteres aceptados es 200
+MAXIMUM_CHARACTERS = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
