--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -14,10 +14,10 @@ REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova pi\
 INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0 = Il valore deve essere >= 0
-MAXIMUM_VALUE_10 = Il valore deve essere <= 10
+MINIMUM_VALUE = Il valore minimo deve essere >= {value}
+MAXIMUM_VALUE = Il valore massimo deve essere <= {value}
 VALUE_NOT_NULL = Il valore non pu\u00F2 essere nullo
-MAXIMUM_CHARACTERS_200 = Il numero massimo di caratteri accettati \u00E8 200
+MAXIMUM_CHARACTERS = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
