--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -14,10 +14,10 @@ REPORT_GENERATION_FAIL = Nu s-a putut genera raportul. V\u0103 rug\u0103m s\u010
 INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0 = Valoarea trebuie s\u0103 fie >= 0
-MAXIMUM_VALUE_10 = Valoarea trebuie s\u0103 fie <= 10
+MINIMUM_VALUE = Valoarea minim\u0103 trebuie s\u0103 fie >= {value}
+MAXIMUM_VALUE = Valoarea maxim\u0103 trebuie s\u0103 fie <= {value}
 VALUE_NOT_NULL = Valoarea nu poate fi nul\u0103
-MAXIMUM_CHARACTERS_200 = Num\u0103rul maxim de caractere acceptate este 200
+MAXIMUM_CHARACTERS = Num\u0103rul maxim de caractere acceptate este {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
