--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -14,10 +14,10 @@ REPORT_GENERATION_FAIL = Ne moremo ustvariti poro?ila. Poskusite znova pozneje
 INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE_0=Vrednost mora biti >= 0
-MAXIMUM_VALUE_10 = Vrednost mora biti <= 10
-VALUE_NOT_NULL = Vrednost ne sme biti prazna
-MAXIMUM_CHARACTERS_200 = Najve\u010Dje dovoljeno \u0161tevilo znakov je 200
+MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
+MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
+VALUE_NOT_NULL = Vrednost ne sme biti ni\u010Delna
+MAXIMUM_CHARACTERS= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
