1.Disabled swagger-ui per module. 2.Added method to handle NoResourceFoundException. 3.Added translated message for NOT_FOUND key

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 # DEFAULT ERROR
 GENERAL = Internal server error
 
+NOT_FOUND = No resource found
+
 # AUTHENTICATION ERRORS
 INVALID_REGISTRATION_CODE = Invalid registration code
 EMAIL_ALREADY_TAKEN = Email is taken. Please choose another
