--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -1,6 +1,8 @@
 # DEFAULT ERROR
 GENERAL = Notranja napaka stre?nika
 
+NOT_FOUND = Vira ni mogo\u010De najti
+
 # AUTHENTICATION ERRORS
 INVALID_REGISTRATION_CODE = Neveljavna registracijska koda
 EMAIL_ALREADY_TAKEN = Elektronski naslov je ?e v uporabi. Izberite drugega
