added validation for price and repairPrice. Added translations for  text.

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 MINIMUM_VALUE = Minimum value should be >= {value}
 MAXIMUM_VALUE = Maximum value should be <= {value}
 VALUE_NOT_NULL = Value can not be null
+VALUE_MUST_BE_POSITIVE = Value should be 0 or positive
 MAXIMUM_CHARACTERS = Maximum characters accepted is {max}
 
 # PRODUCT ERRORS
