--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -19,6 +19,7 @@ INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
 MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
 VALUE_NOT_NULL = El valor no puede ser nulo
+VALUE_MUST_BE_POSITIVE = El valor debe ser 0 o positivo
 MAXIMUM_CHARACTERS = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # PRODUCT ERRORS
