--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -19,6 +19,7 @@ INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 MINIMUM_VALUE = Il valore minimo deve essere >= {value}
 MAXIMUM_VALUE = Il valore massimo deve essere <= {value}
 VALUE_NOT_NULL = Il valore non pu\u00F2 essere nullo
+VALUE_MUST_BE_POSITIVE = Il valore deve essere 0 o positivo
 MAXIMUM_CHARACTERS = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # PRODUCT ERRORS
