--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -19,6 +19,7 @@ INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 MINIMUM_VALUE = Valoarea minim\u0103 trebuie s\u0103 fie >= {value}
 MAXIMUM_VALUE = Valoarea maxim\u0103 trebuie s\u0103 fie <= {value}
 VALUE_NOT_NULL = Valoarea nu poate fi nul\u0103
+VALUE_MUST_BE_POSITIVE = Valoarea trebuie s\u0103 fie 0 sau pozitiv\u0103
 MAXIMUM_CHARACTERS = Num\u0103rul maxim de caractere acceptate este {max}
 
 # PRODUCT ERRORS
