--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -19,6 +19,7 @@ INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
 MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
 VALUE_NOT_NULL = Vrednost ne sme biti ni\u010Delna
+VALUE_MUST_BE_POSITIVE = Vrednost mora biti 0 ali pozitivna
 MAXIMUM_CHARACTERS= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
 # PRODUCT ERRORS
