refactored validation errors keys for more clarity

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -16,11 +16,11 @@ REPORT_GENERATION_FAIL = Could not generate report. Please try again later
 INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE = Minimum value should be >= {value}
-MAXIMUM_VALUE = Maximum value should be <= {value}
-VALUE_NOT_NULL = Value can not be null
-VALUE_MUST_BE_POSITIVE = Value should be 0 or positive
-MAXIMUM_CHARACTERS = Maximum characters accepted is {max}
+NUMERIC_MINIMUM_VALUE = Minimum value should be >= {value}
+NUMERIC_MAXIMUM_VALUE = Maximum value should be <= {value}
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be 0 or positive
+FIELD_NOT_NULL = Value can not be null
+STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
