--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -16,11 +16,11 @@ REPORT_GENERATION_FAIL = No se pudo generar el informe. Por favor, intente de nu
 INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
-MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
-VALUE_NOT_NULL = El valor no puede ser nulo
-VALUE_MUST_BE_POSITIVE = El valor debe ser 0 o positivo
-MAXIMUM_CHARACTERS = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
+NUMERIC_MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
+NUMERIC_MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
+NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser 0 o positivo
+FIELD_NOT_NULL = El valor no puede ser nulo
+STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
