--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -16,11 +16,11 @@ REPORT_GENERATION_FAIL = Impossibile generare il report. Per favore, riprova pi\
 INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE = Il valore minimo deve essere >= {value}
-MAXIMUM_VALUE = Il valore massimo deve essere <= {value}
-VALUE_NOT_NULL = Il valore non pu\u00F2 essere nullo
-VALUE_MUST_BE_POSITIVE = Il valore deve essere 0 o positivo
-MAXIMUM_CHARACTERS = Il numero massimo di caratteri accettati \u00E8 {max}
+NUMERIC_MINIMUM_VALUE = Il valore minimo deve essere >= {value}
+NUMERIC_MAXIMUM_VALUE = Il valore massimo deve essere <= {value}
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Il valore deve essere 0 o positivo
+FIELD_NOT_NULL = Il valore non pu\u00F2 essere nullo
+STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
