--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -16,11 +16,11 @@ REPORT_GENERATION_FAIL = Ne moremo ustvariti poro?ila. Poskusite znova pozneje
 INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 
 # VALIDATION ERRORS
-MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
-MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
-VALUE_NOT_NULL = Vrednost ne sme biti ni\u010Delna
-VALUE_MUST_BE_POSITIVE = Vrednost mora biti 0 ali pozitivna
-MAXIMUM_CHARACTERS= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
+NUMERIC_MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
+NUMERIC_MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti 0 ali pozitivna
+FIELD_NOT_NULL = Vrednost ne sme biti ni\u010Delna
+STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
