made message clearer

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -18,7 +18,7 @@ INVALID_DATE = Invalid date. Format must be YYYY/MM/DD
 # VALIDATION ERRORS
 NUMERIC_MINIMUM_VALUE = Minimum value should be >= {value}
 NUMERIC_MAXIMUM_VALUE = Maximum value should be <= {value}
-NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be 0 or positive
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be positive or zero
 FIELD_NOT_NULL = Value can not be null
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
