--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -18,7 +18,7 @@ INVALID_DATE = Fecha no v\u00E1lida. El formato debe ser AAAA/MM/DD
 # VALIDATION ERRORS
 NUMERIC_MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
 NUMERIC_MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
-NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser 0 o positivo
+NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser positivo o cero
 FIELD_NOT_NULL = El valor no puede ser nulo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
