--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -18,7 +18,7 @@ INVALID_DATE = Data non valida. Il formato deve essere AAAA/MM/DD
 # VALIDATION ERRORS
 NUMERIC_MINIMUM_VALUE = Il valore minimo deve essere >= {value}
 NUMERIC_MAXIMUM_VALUE = Il valore massimo deve essere <= {value}
-NUMERIC_VALUE_POSITIVE_OR_ZERO = Il valore deve essere 0 o positivo
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Il valore deve essere positivo o pari a zero
 FIELD_NOT_NULL = Il valore non pu\u00F2 essere nullo
 STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
