--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -18,7 +18,7 @@ INVALID_DATE = Neveljaven datum. Format mora biti LLLL/MM/DD
 # VALIDATION ERRORS
 NUMERIC_MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
 NUMERIC_MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
-NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti 0 ali pozitivna
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti pozitivna ali enaka ni\u010D
 FIELD_NOT_NULL = Vrednost ne sme biti ni\u010Delna
 STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
