--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -18,7 +18,7 @@ INVALID_DATE = Dat\u0103 invalid\u0103. Formatul trebuie s\u0103 fie AAAA/LL/ZZ
 # VALIDATION ERRORS
 NUMERIC_MINIMUM_VALUE = Valoarea minim\u0103 trebuie s\u0103 fie >= {value}
 NUMERIC_MAXIMUM_VALUE = Valoarea maxim\u0103 trebuie s\u0103 fie <= {value}
-NUMERIC_VALUE_POSITIVE_OR_ZERO = Valoarea trebuie s\u0103 fie 0 sau pozitiv\u0103
+NUMERIC_VALUE_POSITIVE_OR_ZERO = Valoarea trebuie s\u0103 fie pozitiv\u0103 sau zero
 FIELD_NOT_NULL = Valoarea nu poate fi nul\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
