Added test to check that the serialNUmbers List is not empty

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -22,6 +22,9 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be positive or zero
 FIELD_NOT_NULL = Value can not be null
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
+# MANUAL VALIDATION ERRORS
+LIST_NOT_EMPTY = List must not be empty
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No products were found for the given product manufacturer
