--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -22,6 +22,9 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Il valore deve essere positivo o pari a zero
 FIELD_NOT_NULL = Il valore non pu\u00F2 essere nullo
 STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
+# MANUAL VALIDATION ERRORS
+LIST_NOT_EMPTY = La lista non deve essere vuota
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nessun prodotto trovato per il produttore fornito
