--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -22,6 +22,9 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Valoarea trebuie s\u0103 fie pozitiv\u0103 sau 
 FIELD_NOT_NULL = Valoarea nu poate fi nul\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
+# MANUAL VALIDATION ERRORS
+LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nu s-au g\u0103sit produse pentru produc\u0103torul furnizat
