--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -22,6 +22,9 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti pozitivna ali enaka ni\u010D
 FIELD_NOT_NULL = Vrednost ne sme biti ni\u010Delna
 STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
+# MANUAL VALIDATION ERRORS
+LIST_NOT_EMPTY = Seznam ne sme biti prazen
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nobeni izdelki niso bili najdeni za danega proizvajalca
