--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -22,6 +22,9 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser positivo o cero
 FIELD_NOT_NULL = El valor no puede ser nulo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
+# MANUAL VALIDATION ERRORS
+LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
+
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No se encontraron productos para el fabricante dado
