wrote test for cases when no serialNumbers are found in DB

--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -24,6 +24,7 @@ STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista non deve essere vuota
+SERIAL_NUMBERS_NOT_FOUND = Nessun prodotto trovato per i numeri di serie {0}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
