--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = List must not be empty
+SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
