--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -24,6 +24,7 @@ STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {m
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
+SERIAL_NUMBERS_NOT_FOUND = No se encontraron productos para los n\u00FAmeros de serie {0}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
