--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -24,6 +24,7 @@ STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
