--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -24,6 +24,7 @@ STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Seznam ne sme biti prazen
+SERIAL_NUMBERS_NOT_FOUND = Za serijske \u0161tevilke {0} niso bili najdeni izdelki
 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
