Changed error code to LIST_IS_EMPTY for clarity.

--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -23,7 +23,7 @@ FIELD_NOT_NULL = Valoarea nu poate fi nul\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+LIST_IS_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
 SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 
 # PRODUCT ERRORS
