--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -23,7 +23,7 @@ FIELD_NOT_NULL = Value can not be null
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_NOT_EMPTY = List must not be empty
+LIST_IS_EMPTY = List must not be empty
 SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 
 # PRODUCT ERRORS
