--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -23,7 +23,7 @@ FIELD_NOT_NULL = El valor no puede ser nulo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
+LIST_IS_EMPTY = La lista no debe estar vac\u00EDa
 SERIAL_NUMBERS_NOT_FOUND = No se encontraron productos para los n\u00FAmeros de serie {0}
 
 # PRODUCT ERRORS
