--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -23,7 +23,7 @@ FIELD_NOT_NULL = Il valore non pu\u00F2 essere nullo
 STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_NOT_EMPTY = La lista non deve essere vuota
+LIST_IS_EMPTY = La lista non deve essere vuota
 SERIAL_NUMBERS_NOT_FOUND = Nessun prodotto trovato per i numeri di serie {0}
 
 # PRODUCT ERRORS
