Added test for when no product s found for given qrCode

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -29,3 +29,4 @@ SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No manufacturers were found for the given product category
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No products were found for the given product manufacturer
+QR_CODE_NOT_FOUND = No product was found for the given qr code
