--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -29,3 +29,4 @@ SERIAL_NUMBERS_NOT_FOUND = No se encontraron productos para los n\u00FAmeros de 
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = No se encontraron fabricantes para la categor\u00EDa de producto dada
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = No se encontraron productos para el fabricante dado
+QR_CODE_NOT_FOUND = No se encontr\u00F3 ning\u00FAn producto para el c\u00F3digo QR proporcionado
