--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -29,3 +29,4 @@ SERIAL_NUMBERS_NOT_FOUND = Nessun prodotto trovato per i numeri di serie {0}
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nessun produttore trovato per la categoria di prodotto fornita
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nessun prodotto trovato per il produttore fornito
+QR_CODE_NOT_FOUND = Nessun prodotto trovato per il codice QR fornito
