--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -29,3 +29,4 @@ SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nu s-au g\u0103sit produc\u0103tori pentru categoria de produs dat\u0103
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nu s-au g\u0103sit produse pentru produc\u0103torul furnizat
+QR_CODE_NOT_FOUND = Nu s-a g\u0103sit niciun produs pentru codul QR furnizat
