--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -29,3 +29,4 @@ SERIAL_NUMBERS_NOT_FOUND = Za serijske \u0161tevilke {0} niso bili najdeni izdel
 # PRODUCT ERRORS
 NO_MANUFACTURERS_FOUND = Nobeni proizvajalci niso bili najdeni za dano kategorijo izdelka
 NO_MODELS_TYPES_FOUND_FOR_MANUFACTURER = Nobeni izdelki niso bili najdeni za danega proizvajalca
+QR_CODE_NOT_FOUND = Za podano kodo QR ni bil najden noben izdelek
