1. Added not blank message. 2.Added @NotBlank validation for Strings. 3. Extracted duplicate code in separate method/constant

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -18,6 +18,7 @@ NUMERIC_MINIMUM_VALUE = Minimum value should be >= {value}
 NUMERIC_MAXIMUM_VALUE = Maximum value should be <= {value}
 NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be positive or zero
 FIELD_NOT_NULL = Value can not be null
+FIELD_NOT_BLANK = Value can not be null or blank
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # MANUAL VALIDATION ERRORS
