--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -18,6 +18,7 @@ NUMERIC_MINIMUM_VALUE = El valor m\u00EDnimo debe ser >= {value}
 NUMERIC_MAXIMUM_VALUE = El valor m\u00E1ximo debe ser <= {value}
 NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser positivo o cero
 FIELD_NOT_NULL = El valor no puede ser nulo
+FIELD_NOT_BLANK = El valor no puede ser nulo o vac\u00EDo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # MANUAL VALIDATION ERRORS
