--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -18,6 +18,7 @@ NUMERIC_MINIMUM_VALUE = Valoarea minim\u0103 trebuie s\u0103 fie >= {value}
 NUMERIC_MAXIMUM_VALUE = Valoarea maxim\u0103 trebuie s\u0103 fie <= {value}
 NUMERIC_VALUE_POSITIVE_OR_ZERO = Valoarea trebuie s\u0103 fie pozitiv\u0103 sau zero
 FIELD_NOT_NULL = Valoarea nu poate fi nul\u0103
+FIELD_NOT_BLANK = Valoarea nu poate fi nul\u0103 sau goal\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
 # MANUAL VALIDATION ERRORS
