--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -18,6 +18,7 @@ NUMERIC_MINIMUM_VALUE = Najmanj\u0161a vrednost mora biti >= {value}
 NUMERIC_MAXIMUM_VALUE = Najve\u010Dja vrednost mora biti <= {value}
 NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti pozitivna ali enaka ni\u010D
 FIELD_NOT_NULL = Vrednost ne sme biti ni\u010Delna
+FIELD_NOT_BLANK = Vrednost ne sme biti ni\u010D ali prazna
 STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
 
 # MANUAL VALIDATION ERRORS
