--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_IS_EMPTY = List must not be empty
+LIST_CONTAINS_NULL = List must not contain the value null
 SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 
 # PRODUCT ERRORS
