--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -23,6 +23,7 @@ STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
 # MANUAL VALIDATION ERRORS
 LIST_IS_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+LIST_CONTAINS_NULL = Lista nu trebuie s\u0103 con\u021Bin\u0103 valoarea null
 SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 
 # PRODUCT ERRORS
