not empty guard clause is replaced with parameter validation vis @NotEmpty. Added method in globalExceptionHandler to handle method parameter validations

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -22,7 +22,7 @@ FIELD_NOT_BLANK = Value can not be null or blank
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_IS_EMPTY = List must not be empty
+LIST_NOT_EMPTY = List must not be empty
 LIST_CONTAINS_NULL = List must not contain the value null
 SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 
