--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -22,7 +22,7 @@ FIELD_NOT_BLANK = El valor no puede ser nulo o vac\u00EDo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_IS_EMPTY = La lista no debe estar vac\u00EDa
+LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
 LIST_CONTAINS_NULL = La lista no debe contener el valor null
 SERIAL_NUMBERS_NOT_FOUND = No se encontraron productos para los n\u00FAmeros de serie {0}
 
