--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -22,7 +22,7 @@ FIELD_NOT_BLANK = Valoarea nu poate fi nul\u0103 sau goal\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_IS_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
 LIST_CONTAINS_NULL = Lista nu trebuie s\u0103 con\u021Bin\u0103 valoarea null
 SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 
