--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -22,7 +22,7 @@ FIELD_NOT_BLANK = Il valore non pu\u00F2 essere nullo o vuoto
 STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
 
 # MANUAL VALIDATION ERRORS
-LIST_IS_EMPTY = La lista non deve essere vuota
+LIST_NOT_EMPTY = La lista non deve essere vuota
 LIST_CONTAINS_NULL = L'elenco non deve contenere il valore null
 SERIAL_NUMBERS_NOT_FOUND = Nessun prodotto trovato per i numeri di serie {0}
 
